--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,13 @@
+// reset
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
